--- a/content_scripts/inline-comments-style.css
+++ b/content_scripts/inline-comments-style.css
@@ -1,14 +1,14 @@
-.phil-highlight {
+.hn-inline-highlight {
   position: relative;
   display: inline-block;
   background: rgba(255, 102, 0, 0.4);
 }
 
-.phil-highlight:hover .phil-extension {
+.hn-inline-highlight:hover .hn-inline-extension {
   opacity: 1;
 }
 
-.phil-extension {
+.hn-inline-extension {
   opacity: 0;
   font-size: 9pt !important;
   font-family: Verdana, Geneva, sans-serif !important;
@@ -27,7 +27,7 @@
   border-top: 0.3em solid #FF6600;
 }
 
-.phil-extension::before {
+.hn-inline-extension::before {
   content: '';
   width: .8em;
   height: .8em;
@@ -42,7 +42,7 @@
   background: #f6f6ef;
 }
 
-.phil-extension-header {
+.hn-inline-extension-header {
   color: #828282 !important;
   font-size: 8pt  !important;
   text-decoration: none !important;
@@ -50,16 +50,16 @@
   font-family: Verdana, Geneva, sans-serif !important;
 }
 
-.phil-extension-header a {
+.hn-inline-extension-header a {
   color: inherit !important;
   text-decoration: none !important;
 }
 
-.phil-extension-header a:hover {
+.hn-inline-extension-header a:hover {
   text-decoration: underline !important;
 }
 
-.phil-comment {
+.hn-inline-comment {
   margin: 0 1em 1em !important; 
   font-family: Verdana, Geneva, sans-serif !important;
 }
